@@ -6,7 +6,6 @@ swaggerSources {
   client {
     inputFile = file(tasks.getByPath(':openapi:buildOpenApi').openApiSource)
     code {
-      jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for Java 16+
       language = "java"
       library = "jersey2"
       templateDir = file("${projectDir}/src/main/resources/swaggercodegen")
@@ -18,11 +17,12 @@ swaggerSources {
               "--group-id", "${artifactGroup}",
               "--artifact-version", "${version}",
               "--ignore-file-override", "${projectDir}/.swagger-codegen-ignore",
-              "--additional-properties", "errorOnUnknownEnum=true",
+              "--additional-properties", "errorOnUnknownEnum=false",
               "-D", "apiTests=false," +
                       "apiDocs=false," +
                       "modelTests=false," +
                       "modelDocs=false," +
+                      "jakarta=true," +
                       "dateLibrary=java8"
       ]
     }
